--- a/projects/plaid/plaid testing.ipynb
+++ b/projects/plaid/plaid testing.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-17T22:33:29.423507Z",
-     "start_time": "2024-01-17T22:33:29.391222Z"
+     "end_time": "2024-03-19T12:56:54.565308Z",
+     "start_time": "2024-03-19T12:56:54.386484Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jmcaffee/git/python-playground-v2/venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import plaid\n",
     "from plaid.api import plaid_api\n",
@@ -65,181 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No institution ids found for: PNC Bank\n",
-      "No institution ids found for: Caye International Bank\n",
-      "No institution ids found for: Central Coast Federal Credit Union\n",
-      "No institution ids found for: First Heritage FCU\n",
-      "No institution ids found for: First Bank & Trust- BANKeasy\n",
-      "No institution ids found for: CUSB Bank\n",
-      "No institution ids found for: Fidelity Investments\n",
-      "No institution ids found for: Commercial Bank TN\n",
-      "No institution ids found for: Signet FCU\n",
-      "No institution ids found for: Brooklyn Coop FCU\n",
-      "No institution ids found for: CBI Family of Banks\n",
-      "No institution ids found for: TLC Community CU\n",
-      "No institution ids found for: CommerceOne Bank\n",
-      "No institution ids found for: MembersAlliance Credit Union\n",
-      "No institution ids found for: American National Bank & Trust Company\n",
-      "No institution ids found for: Profinium Inc\n",
-      "No institution ids found for: Bank of Commerce (Rawlins)\n",
-      "No institution ids found for: Focus FCU\n",
-      "No institution ids found for: O'Bannon Banking Company\n",
-      "No institution ids found for: Five Star CU\n",
-      "No institution ids found for: California Bear Credit Union\n",
-      "No institution ids found for: Cedar Falls Community CU\n",
-      "No institution ids found for: Government Employees FCU\n",
-      "No institution ids found for: Citizens Bank & Trust (MO)\n",
-      "No institution ids found for: Auburn University Credit Union\n",
-      "No institution ids found for: SecFed Bank\n",
-      "No institution ids found for: AOD FCU\n",
-      "No institution ids found for: Citizens Bank & Trust - AR\n",
-      "No institution ids found for: CHROME FCU\n",
-      "No institution ids found for: OneSouth Bank\n",
-      "No institution ids found for: Altana FCU\n",
-      "No institution ids found for: Eagle Louisiana FCU\n",
-      "No institution ids found for: Commercial Bank & Trust Co\n",
-      "No institution ids found for: Duke University FCU\n",
-      "No institution ids found for: Changing Seasons Federal Credit Union\n",
-      "No institution ids found for: Citizens National Bank of Somerset\n",
-      "No institution ids found for: National Bank of Sallisaw\n",
-      "No institution ids found for: Cloverbelt Credit Union\n",
-      "No institution ids found for: Education First FCU\n",
-      "No institution ids found for: CO-OP CU of Montevideo\n",
-      "No institution ids found for: First National Bank of Beardstown\n",
-      "No institution ids found for: Community First Bank (KS)\n",
-      "No institution ids found for: Citizens State Bank & Trust\n",
-      "No institution ids found for: Citizens State Bank (IA)\n",
-      "No institution ids found for: Cutting Edge Credit Union\n",
-      "No institution ids found for: Danville State Savings Bank\n",
-      "No institution ids found for: Exchange Bank of NEMO\n",
-      "No institution ids found for: Education First CU\n",
-      "No institution ids found for: Farmers State Bank of LaGrange\n",
-      "No institution ids found for: Chain Bridge Bank N.A.\n",
-      "No institution ids found for: First Community Bank (Corpus Christi)\n",
-      "No institution ids found for: First State Bank Fountain\n",
-      "No institution ids found for: First National Bank of Waynesboro\n",
-      "No institution ids found for: The Farmers State Bank (Brush)\n",
-      "No institution ids found for: Robertson Banking Company\n",
-      "No institution ids found for: First Service FCU\n",
-      "No institution ids found for: First State Bank Livingston\n",
-      "No institution ids found for: RockPointBank\n",
-      "No institution ids found for: FNB Cloverdale\n",
-      "No institution ids found for: First National Bank of Sparta\n",
-      "No institution ids found for: SUMA Federal Credit Union\n",
-      "No institution ids found for: Security Bank Midwest\n",
-      "No institution ids found for: SMW 104 Federal Credit Union\n",
-      "No institution ids found for: Gather FCU\n",
-      "No institution ids found for: Leading Edge Credit Union\n",
-      "No institution ids found for: Think Bank\n",
-      "No institution ids found for: 1st United CU\n",
-      "No institution ids found for: Sea Air FCU\n",
-      "No institution ids found for: First National Bank and Trust of Bottineau\n",
-      "No institution ids found for: The Citizens Bank Arkansas\n",
-      "No institution ids found for: State Bank Spencer\n",
-      "No institution ids found for: Centre Bank\n",
-      "No institution ids found for: North Carolina Community FCU\n",
-      "No institution ids found for: Central National Bank of Poteau\n",
-      "No institution ids found for: Peoples State Bank (WI)\n",
-      "No institution ids found for: 1st National Bank Henning\n",
-      "No institution ids found for: Harrison Building & Loan Association\n",
-      "No institution ids found for: Financial Plus Credit Union (IA)\n",
-      "No institution ids found for: Pioneer Appalachia Federal Credit Union\n",
-      "No institution ids found for: First Community Bank of Tennessee\n",
-      "No institution ids found for: First Northern Bank of Wyoming\n",
-      "No institution ids found for: First Peoples Bank of Tennessee\n",
-      "No institution ids found for: Old Second National Bank\n",
-      "No institution ids found for: F&M Bank of Central California\n",
-      "No institution ids found for: First National Bank and Trust Company of McAlester\n",
-      "No institution ids found for: First State Bank (Winchester)\n",
-      "No institution ids found for: Merchants Mortgage & Trust Company\n",
-      "No institution ids found for: Mass Bay CU\n",
-      "No institution ids found for: Highmark FCU\n",
-      "No institution ids found for: FDNB - Loft Advisors\n",
-      "No institution ids found for: Henrico FCU\n",
-      "No institution ids found for: LimeBank\n",
-      "No institution ids found for: Tennessee Members 1st FCU\n",
-      "No institution ids found for: First National Bank (Heavener)\n",
-      "No institution ids found for: PARDA FCU\n",
-      "No institution ids found for: Moultrie Bank & Trust\n",
-      "No institution ids found for: Crews Bank & Trust\n",
-      "No institution ids found for: Heritage Valley FCU\n",
-      "No institution ids found for: Jefferson Parish Employees FCU\n",
-      "No institution ids found for: MECE CU\n",
-      "No institution ids found for: HomeTown Federal Credit Union\n",
-      "No institution ids found for: KEMBA Financial CU\n",
-      "No institution ids found for: MA Bank\n",
-      "No institution ids found for: MAC FCU\n",
-      "No institution ids found for: Modesto's First FCU\n",
-      "No institution ids found for: Old West Federal Credit Union\n",
-      "No institution ids found for: Mountain CU\n",
-      "No institution ids found for: The First National Bank of Louisburg\n",
-      "No institution ids found for: Merchants & Planters Bank\n",
-      "No institution ids found for: One Source FCU\n",
-      "No institution ids found for: Peoples Bank & Trust (MO)\n",
-      "No institution ids found for: Peoples State Bank ND\n",
-      "No institution ids found for: Glendale FCU\n",
-      "No institution ids found for: GNBank\n",
-      "No institution ids found for: Landings CU\n",
-      "No institution ids found for: NE PA Community FCU\n",
-      "No institution ids found for: Israel Discount Bank of New York\n",
-      "No institution ids found for: Jersey Shore Federal Credit Union\n",
-      "No institution ids found for: Linn-Co FCU\n",
-      "No institution ids found for: Old Hickory CU\n",
-      "No institution ids found for: Ohio Catholic Federal Credit Union\n",
-      "No institution ids found for: Olean Area Federal Credit Union\n",
-      "No institution ids found for: Palisades Federal Credit Union\n",
-      "No institution ids found for: Peoples Advantage FCU\n",
-      "No institution ids found for: Peoples Bank (KS)\n",
-      "No institution ids found for: Pinellas FCU\n",
-      "No institution ids found for: United Citizens Bank & Trust Co\n",
-      "No institution ids found for: Signature FCU\n",
-      "No institution ids found for: The First National Bank of Williamson\n",
-      "No institution ids found for: Triangle Federal Credit Union\n",
-      "No institution ids found for: UniWyo Credit Union\n",
-      "No institution ids found for: Ukrainian Selfreliance MI FCU\n",
-      "No institution ids found for: WEPCO FCU\n",
-      "No institution ids found for: First State Bank and Trust-Bayport MN\n",
-      "No institution ids found for: First Southwest Bank CO\n",
-      "No institution ids found for: Skowhegan Savings Bank\n",
-      "No institution ids found for: Slovenian Savings & Loan\n",
-      "No institution ids found for: Trailhead Federal Credit Union\n",
-      "No institution ids found for: Univest Bank and Trust Co. Member FDIC\n",
-      "No institution ids found for: The First National Bank (Allendale)\n",
-      "No institution ids found for: Tru Fi CU\n",
-      "No institution ids found for: Truity FCU\n",
-      "No institution ids found for: TruStar Federal Credit Union\n",
-      "No institution ids found for: United States Senate FCU\n",
-      "No institution ids found for: Tulare County FCU\n",
-      "No institution ids found for: Universal City Studios CU\n",
-      "No institution ids found for: Volunteer Federal Savings Bank\n",
-      "No institution ids found for: Success Federal Credit Union\n",
-      "No institution ids found for: West Virginia Central FCU\n",
-      "No institution ids found for: Southern Michigan Bank & Trust\n",
-      "No institution ids found for: Southeastern CU\n",
-      "No institution ids found for: Sterling FCU\n",
-      "No institution ids found for: HNB National Bank\n",
-      "No institution ids found for: United Southeast FCU\n",
-      "No institution ids found for: Western Co-Op CU\n",
-      "No institution ids found for: Platte Valley Bank - Torrington\n",
-      "No institution ids found for: Great Falls Federal Credit Union\n",
-      "No institution ids found for: Eastmill Federal Credit Union\n",
-      "No institution ids found for: Members Choice CU - KY\n",
-      "No institution ids found for: Minnesota Power Employees CU\n",
-      "No institution ids found for: Lanco FCU\n",
-      "No institution ids found for: Casco Federal Credit Union\n",
-      "No institution ids found for: Pan American Bank & Trust\n",
-      "No institution ids found for: Texas State Bank (San Angelo)\n",
-      "No institution ids found for: WNB Financial N.A.\n",
-      "No institution ids found for: Firefighters Community Credit Union\n",
-      "No institution ids found for: Sabattus Regional Credit Union\n",
-      "No institution ids found for: Mid American CU\n",
-      "done\n"
+     "ename": "NameError",
+     "evalue": "name 'akoya_provider_names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 6\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mplaid\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcountry_code\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m CountryCode\n\u001B[1;32m      4\u001B[0m all_institution_ids \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m----> 6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m akoya_provider_name \u001B[38;5;129;01min\u001B[39;00m \u001B[43makoya_provider_names\u001B[49m:\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;66;03m# print(f\"searching for {akoya_provider_name}\")\u001B[39;00m\n\u001B[1;32m      8\u001B[0m     request \u001B[38;5;241m=\u001B[39m InstitutionsSearchRequest(query\u001B[38;5;241m=\u001B[39makoya_provider_name, country_codes\u001B[38;5;241m=\u001B[39m[CountryCode(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUS\u001B[39m\u001B[38;5;124m\"\u001B[39m)]) \u001B[38;5;66;03m#, products=[\"transactions\"]\u001B[39;00m\n\u001B[1;32m      9\u001B[0m     response \u001B[38;5;241m=\u001B[39m plaid_client\u001B[38;5;241m.\u001B[39minstitutions_search(request)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'akoya_provider_names' is not defined"
      ]
     }
    ],
@@ -264,8 +109,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T21:48:29.694360Z",
-     "start_time": "2024-01-18T21:45:37.126762Z"
+     "end_time": "2024-03-19T12:57:06.746047Z",
+     "start_time": "2024-03-19T12:57:06.602549Z"
     }
    },
    "id": "42add77579cea480"
