llamafile on windows working at .5 tokens per second.

--- a/projects/llamafile/llama 3 client.ipynb
+++ b/projects/llamafile/llama 3 client.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Performance\n",
+    "Meta-Llama-3-70B-Instruct.Q4_0.llamafile on RTX 3090 runs .5-.6 tokens per second"
+   ],
+   "id": "59db2fe0347b62c0"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
@@ -16,6 +25,18 @@
     "!. /Users/jmcaffee/llm_models/Meta-Llama-3-8B-Instruct.Q5_K_M.llamafile -ngl 9999 --server --nobrowser\n",
     "# !sh -c /Users/jmcaffee/llm_models/Meta-Llama-3-70B-Instruct.Q4_0.llamafile -ngl 9999"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Windows Setup\n",
+    "\n",
+    "Since windows has a 4GB size limit to application files, you need to download llamafile-0.8.1, then rename it to include an .exe, then point it to your model's llamafile\n",
+    "\n",
+    "https://github.com/Mozilla-Ocho/llamafile/releases\n"
+   ],
+   "id": "33d1b3927a90058e"
   },
   {
    "metadata": {
